--- a/alerta.html
+++ b/alerta.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💗</title>
+    <title>test</title>
+    <link rel="short icon" href="toad.png">
 </head>
-<style> 
-       
+<style>
+body{
+    background-image: url("arranjo-de-patos-de-borracha-ainda-vida\ \(1\).jpg");
+    color: grey;
+    
+}
+div {
+   
+   background-image: url("closeup-de-borracha-duckies.jpg");
+   height: 400px;
+   width: 100%;
+}
 </style>
 
 <body>
+    <br>
     <p>hello</p>
 </body>
 </html>
